--- a/swiggy-subway/src/components/navbar/navbar.styles.scss
+++ b/swiggy-subway/src/components/navbar/navbar.styles.scss
@@ -56,12 +56,30 @@ a {
 
 .nav-item {
     margin-right: 5rem;
+    color:#282c3f;
+}
+
+.fas,.far{
+    padding:0.5rem;
+    font-size: 1.8rem;
+
 }
 
 .nav-link{
-    font-size: 1.8rem;
+    font-size: 1.6rem;
     font-weight: 400;
     color: #475569;
+    text-decoration: none;
+    &:hover{
+        color: orange;
+    }
+}
+.percent{
+    height:2rem;
+    padding:0.5rem;
+}
+a:hover{
+    color: orange;
 }
 
 .nav-link:hover{
@@ -69,5 +87,5 @@ a {
 }
 
 .brand{
-    height:6.5rem;
+    height:5.5rem;
 }
