--- a/swiggy-subway/src/components/place/place.styles.scss
+++ b/swiggy-subway/src/components/place/place.styles.scss
@@ -1,8 +1,9 @@
 .location{
     padding:0.8rem;
-    background-color: gainsboro;
+    background-color: whitesmoke;
 }
 .location-content{
+    color:#93959f;
     font-size:1rem;
     margin-left: 17rem;
     line-height: 1.2;
