--- a/swiggy-subway/src/components/subway/subway.styles.scss
+++ b/swiggy-subway/src/components/subway/subway.styles.scss
@@ -1,5 +1,80 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
+
 .container{
     width:100%;
     height:25rem;
-    background-color: #189C0E;
+    display: flex;
+    background-color: #118d51;
+    padding:1rem;
+    color:white;
+}
+
+
+.section{
+ border: 1px solid blanchedalmond;
+
+}
+.section-1{
+    flex:2;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+}
+.section-border{
+    padding: 3rem;
+    margin-top: 1rem;
+    width:30rem;
+    height:20rem;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    
+}
+.subway-logo{
+    height:15rem;
+    align-items: center;
+    text-align: center;
+}
+
+.section-2{
+    flex:3;
+    padding: 1rem;
+}
+
+h1{
+    font-family: 'Poppins', sans-serif;
+    font-size: 3rem;
+    display: block;
+}
+.sub{
+    display: block;
+    margin-top: 0.5rem;
+}
+
+.sub-1{
+    background-color:#8a584b!important;
+    color:#fff;
+    padding:0.3rem 0.6rem;
+    margin-right:0.8rem;
+    font-weight: 400;
+    height:2.5rem;
+    white-space: nowrap;
+    display: inline-block;
+    font-size: 1.3rem;
+}
+.sub-2{
+    color: #fff;
+    font-size: 1.3rem;
+}
+.sub-3{
+    display: block;
+    margin-top:8px;
+    margin-left:8px;
+    // font-family: 'Roboto', sans-serif;
+    // font-weight:400;
+    font-size: 1.4rem;
+    height:2.5rem;
+    
+}
+.section-3{
+    flex:2;
 }
