--- a/swiggy-subway/src/components/subway/subway.styles.scss
+++ b/swiggy-subway/src/components/subway/subway.styles.scss
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Roboto:wght@100&display=swap');
 
 .container{
     width:100%;
@@ -11,10 +12,10 @@
 }
 
 
-.section{
- border: 1px solid blanchedalmond;
+// .section{
+//  border: 1px solid blanchedalmond;
 
-}
+// }
 .section-1{
     flex:2;
     display: flex;
@@ -75,6 +76,120 @@ h1{
     height:2.5rem;
     
 }
+
+
+.ratings{
+    margin-top:1.8rem;
+    width:65%;
+    padding:2rem;
+    // border: 1px solid white;
+
+}
+.row-container{
+    margin:0 auto;
+    margin-left: 1rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    
+}
+
+
+.row-1{
+    flex: 1;
+    font-weight:600;
+    font-size:1.6rem;
+    padding-right: 2rem;
+
+    color: #fff; 
+    // border: 1px solid white;
+    border-right: 1px solid hsla(0,0%,100%,.2);
+    
+
+    &-subclass{
+        font-size:1.2rem;
+        color: rgb(223, 221, 221);
+    }
+}
+.fas{
+   font-weight:600;
+   font-size:1.6rem;
+   color: #fff; 
+}
+.row-2{
+    flex:1;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    font-weight:600;
+    font-size:1.6rem;
+    color: #fff; 
+    // border: 1px solid white;
+    border-right: 1px solid hsla(0,0%,100%,.2);
+    // border: 1px solid white;
+
+    &-subclass{
+        padding-top: 0.3rem;
+        font-size: 1.2rem;
+        color: rgb(223, 221, 221);
+    }
+}
+.row-3{
+    flex:1;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    font-weight:600;
+    font-size:1.6rem;
+    color: #fff; 
+    // border: 1px solid white;
+    &-subclass{
+    font-size: 1.2rem;
+    color: rgb(223, 221, 221);
+
+    }
+}
 .section-3{
     flex:2;
+    padding:1.5rem;
+    padding-top: 2rem;
+    color:#fff;
+    font-family: 'Open Sans', sans-serif;
+font-family: 'Roboto', sans-serif;
+}
+
+fieldset{
+    width:33rem;
+    height: 17rem;
+    border:1px solid #fff
+    // margin:0 auto;
+
+}
+
+legend{
+    font-size: 2.5rem;
+}
+
+.offer{
+    display:flex;
+    flex-direction: column;
+    font-size: 1.5rem;
+    padding:2rem;
+    font-family: 'Open Sans', sans-serif;
+font-family: 'Roboto', sans-serif;
+    &-1{
+        flex:1
+    }
+    &-2{
+        flex:2
+    }
+}
+
+.content{
+    display: flex;
+    flex-direction: row;
+    margin: 0.5rem;
+}
+.offer-logo{
+    flex:1;
+    padding:10px;
+    font-size:1rem;
 }
