--- a/swiggy-subway/src/components/subway/subway.styles.scss
+++ b/swiggy-subway/src/components/subway/subway.styles.scss
@@ -111,7 +111,7 @@ h1{
         color: rgb(223, 221, 221);
     }
 }
-.fas{
+.test-2{
    font-weight:600;
    font-size:1.6rem;
    color: #fff; 
@@ -159,7 +159,8 @@ font-family: 'Roboto', sans-serif;
 fieldset{
     width:33rem;
     height: 17rem;
-    border:1px solid #fff
+    border:1px solid #fff;
+    border-radius: 1.5rem;
     // margin:0 auto;
 
 }
@@ -192,4 +193,11 @@ font-family: 'Roboto', sans-serif;
     flex:1;
     padding:10px;
     font-size:1rem;
+}
+
+.input-search{
+    width:25.4rem;
+    border: 1px solid black;
+    
+
 }
