menu-card-component

--- a/swiggy-subway/src/components/list/list-styles.scss
+++ b/swiggy-subway/src/components/list/list-styles.scss
@@ -19,8 +19,8 @@ font-family: 'Poppins', sans-serif;
     font-size: 1.5rem;
     font-weight: bold;
 }
-p{
-    padding: 0.5rem;
+.header-2{
+    padding: 0.3rem;
     &:hover{
         color: orange;
         transition: 0.1s;
