--- a/swiggy-subway/src/components/menu-card/menucard.styles.scss
+++ b/swiggy-subway/src/components/menu-card/menucard.styles.scss
@@ -14,8 +14,8 @@
     }
     &-2{
         flex:2;
-        // border:1px solid black;
-        text-align: center;
+        border:1px solid black;
+        // text-align: center;
 
     }
     &-3{
@@ -24,4 +24,10 @@
         text-align: center;
 
     }
+}
+.menucard-header{
+    margin:3rem;
+    color: rgb(1, 1, 26);
+    text-transform: capitalize;
+    word-spacing: 1rem;
 }
