--- a/test/index.css
+++ b/test/index.css
@@ -55,3 +55,43 @@ font-weight: 1000;
     background-color: #fff;
     border:1px solid rgb(206, 198, 198)
 }
+
+.block{
+    width:50%;
+    margin: 0 auto;
+    margin-top: 2rem;
+    /* border:1px solid black */
+}
+.table-header{
+    width:10rem;
+    /* height:10rem; */
+}
+.row-1{
+    margin: 1rem;
+    padding: 2rem;
+    background-color: #fff;
+    box-shadow: -2px 6px 17px 2px rgba(0,0,0,0.75);
+-webkit-box-shadow: -2px 6px 17px 2px rgba(0,0,0,0.75);
+-moz-box-shadow: -2px 6px 17px 2px rgba(0,0,0,0.75);
+
+}
+.logo-search{
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
+
+}
+.row-2{
+    border: 1px solid black;
+}
+
+.search-1{
+    /* margin: 1rem; */
+    margin-right: 1rem;
+    border: none;
+    height: 2rem;
+    text-align: center;
+}
+
+.search-label{
+    padding-right: 1.5rem;
+}
