--- a/swiggy-subway/src/components/menu-card/menucard.styles.scss
+++ b/swiggy-subway/src/components/menu-card/menucard.styles.scss
@@ -1,6 +1,6 @@
 .menu{
     width:100%;
-    height:65vh;
+    height:90vh;
     display: flex;
     border:1px solid black;
     padding: 2rem;
@@ -15,6 +15,7 @@
     &-2{
         flex:2;
         border:1px solid black;
+        overflow:visible;
         // text-align: center;
 
     }
