--- a/swiggy-subway/src/components/menu-list/menu-list.styles.scss
+++ b/swiggy-subway/src/components/menu-list/menu-list.styles.scss
@@ -1,3 +1,10 @@
+.menu-header{
+    width:100%;
+    height:100%;
+    overflow: scroll;
+    overflow-x: hidden;
+    overflow-y: hidden;
+}
 .menulist{
     width:90%;
     // height:5rem;
