working on search field

--- a/swiggy-subway/src/components/search/search.styles.scss
+++ b/swiggy-subway/src/components/search/search.styles.scss
@@ -1,74 +1,81 @@
 .field{
-    background-color: transparent;
-
-    width:60rem;
-
     position: relative;
-    // justify-content: space-between;
-&-table{
-    background-color: #fff !important;
-    margin-left: 3rem;
-    position: absolute;
-    top:-4.8rem;
-    left:12rem;
-}
-&-col-1{
-    
-    width:20rem;
-    margin-right: 400rem;
-    border: 1px solid black;
-    color: #3d4152;
-    box-shadow:0 3px 15px 0 rgb(40, 44, 43/10%);
-    font-weight: 400;
-    
-    
-}
-&-logo{
-    padding: 0.5rem;
-    font-size: 1.5rem;
-}
-&-search{
-    height:2.5rem;
-    border-style: none;
-    // margin-right: 3rem;
-    
-}
-
-&-col-2{
-    margin-left: 2rem;
-    font-size: 1.4rem;
-    padding: 1rem;
-    color: #3d4152;
-    box-shadow:0 3px 15px 0 rgb(40, 44, 43/10%);
-    font-weight: 400;
-
-    &:hover{
-        color: rgb(116, 182, 17);
-        transition: 0.8s;
+    &-table{
+        position: absolute;
+        top:-2rem;
+        left:50rem;
+        margin: 0 auto;
+        border-collapse: separate;
+        border-spacing: 30px 0;
+      
     }
-    
-}
+    &-table-1{
+        background-color: #fff;
+        box-shadow:0 3px 15px 0 rgb(40, 44, 43/10%);
+        height: 2.5rem;
 
-&-col-3{
-    width:8rem;
-    color: #3d4152;
-    box-shadow:0 3px 15px 0 rgb(40, 44, 43/10%);
-}
-&-checkbox{
-    margin-right: 0.5rem;
-}
-&-heart{
-    margin: 0.5rem;
-}
-&-fav{
-    font-size: 1.4rem;
-    font-weight: 400;
-    &:hover{
-        color:rgb(224, 10, 46);
-        transition: 0.5s;
     }
-}
-td{
-    margin-left: 5rem;
-}
+    &-logo{
+        margin-right: 1rem;
+        font-size: 1.6rem;
+    }
+    &-name{
+        border: none;
+        height: 2rem;
+    }
+    &-table-2{
+        background-color: #fff;
+        box-shadow:0 3px 15px 0 rgb(40, 44, 43/10%);
+        height: 2.5rem;
+        &:hover{
+            color: rgb(47, 194, 47)
+        }
+    }
+    &-checkbox{
+        margin: 1rem;
+        &:hover{
+            color: rgb(47, 194, 47);
+            transition: 1s;
+
+        }
+    }
+    &-label{
+        font-size: 1.5rem;
+        margin-top: -1rem;
+        padding-right: 1rem;
+        &:hover{
+            color: rgb(47, 194, 47);
+            transition: 1s;
+
+        }
+    }
+
+    &-table-3{
+        background-color: #fff;
+        box-shadow:0 3px 15px 0 rgb(40, 44, 43/10%);
+
+    }
+    &-heart{
+        padding: 0.5rem;
+        font-size: 1.5rem;
+
+        &:hover{
+            color:rgb(236, 76, 103);
+            transition: 1s;
+
+        }
+
+    }
+    &-fav{
+        font-size: 1.5rem;
+        padding: 1rem;
+        &:hover{
+            color: rgb(236, 76, 103);
+            transition: 1s;
+
+        }
+
+    }
+
+
 }
