--- a/swiggy-subway/src/components/menu-list/menu-list.styles.scss
+++ b/swiggy-subway/src/components/menu-list/menu-list.styles.scss
@@ -2,11 +2,12 @@
     width: 60rem;
     height:70vh;
     margin: 0 auto;
-    margin-top: 15rem;
+    margin-top: 10rem;
     padding: 1rem;
     background-color:#fff;
     display: flex;
     flex-direction: column;
+    border: 1px solid black;
     &-1{
         flex:1;
         -webkit-box-shadow: 0 8px 6px -6px rgb(156, 151, 151);
@@ -19,12 +20,14 @@
     }
     &-2{
         flex:3;
-        height:3rem;
+        height:2.5rem;
         padding-top: 1rem;
         // border: 1px solid black;
         // margin-top:1rem;
         overflow: scroll;
         overflow-x: hidden;
+        // border: 1px solid black;
+
         // overflow-y: hidden;
     }
     &-3{
@@ -93,6 +96,19 @@
     
         margin-right: 1rem;
         
+    }
+    &-choosen{
+        display: block;
+        margin-top: 1rem;
+        margin-left: 1rem;
+        margin-right:1rem;
+        // margin-top: -5rem;
+        &-1{
+            float: left;
+        }
+        &-2{
+            float: right;
+        }
     }
 }
 .menu-header{
